--- a/imageviewer/src/main/res/values/styles.xml
+++ b/imageviewer/src/main/res/values/styles.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Light.NoTitle.ViewerDialog" parent="@android:style/Theme.Dialog">
+    <!--<style name="Theme.Light.NoTitle.ViewerDialog" parent="@android:style/Theme.Dialog">-->
+    <style name="Theme.Light.NoTitle.ViewerDialog" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
